--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hello World ! I'm Thunder.
+            Hello World ! I'm Arpan. This is my First Webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
