[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,9 @@
         <br>
         <div class="center text-big bold">
             Hello World ! I'm Arpan. This is my First Webapp.
+            <div class= "text-big bold">
+                43112609 related to prime number
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
