[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hello World ! I'm Arpan. This is my First Webapp.
-            <div class= "text-big bold">
+            <div class= "center text-big bold">
                 43112609 related to prime number
             </div>
         </div>
