[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,14 +6,14 @@
     <body>
         <div class="center">
             <img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-0/p480x480/12729336_837520239726369_7516021076845337795_n.jpg?oh=fcd1afb9f7a0fa111a6290c9b3b3e997&amp;oe=594989E7" class="img-medium">
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hello World ! I'm Arpan. This is my First Webapp.
-            <div class= "center text-big bold">
-                43112609 related to prime number
+            <hr/>
+            <h3>Personal</h3>
+            <div>
+                Hi ! My Name is Arpan
             </div>
         </div>
+        <br>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
